--- a/CSS/style.css
+++ b/CSS/style.css
@@ -88,7 +88,7 @@ body {
   position: fixed;
   right: 0px;
   z-index: 2;
-  padding: 1%;
+  padding: 1.5%;
 }
 
 .circle a,
@@ -110,6 +110,7 @@ a:visited {
   font-size: 1.5rem;
   font-weight: bold;
   margin-bottom: 10%;
+  transition: all 0.3s;
 }
 
 .circle1:hover {
@@ -128,6 +129,7 @@ a:visited {
   color: #fff;
   font-size: 1.5rem;
   font-weight: bold;
+  transition: all 0.3s;
 }
 
 .circle2:hover {
@@ -168,11 +170,10 @@ a:visited {
 
 .__inner {
   max-width: 1250px;
-  width:100%;
+  width:77.5%;
   position: relative;
   margin: 0 auto;
   padding: 7% 0;
-  text-align: center;
 }
 
 .pro-wrap__topttl{
@@ -241,6 +242,7 @@ a:visited {
 a:visited {
   text-decoration: none;
   color: #fff;
+  transition: all 0.3s;
 }
 
 .pro-wrap__more:hover {
@@ -316,6 +318,7 @@ a:visited {
 a:visited {
   text-decoration: none;
   color: #fff;
+  transition: all 0.3s;
 }
 
 .fea-wrap__more:hover {
@@ -336,7 +339,7 @@ table {
   background-color: #fff;
   border-collapse: collapse;
   border: 1px solid #b0b0b0;
-  width: 70%;
+  width: 100%;
   display: inline-block;
   text-align: center;
   border: none;
@@ -398,6 +401,7 @@ td span{
 a:visited {
   text-decoration: none;
   color: #fff;
+  transition: all 0.3s;
 }
 
 .sim-wrap__more:hover {
@@ -417,6 +421,7 @@ a:visited {
 a:visited {
   text-decoration: none;
   color: #fff;
+  transition: all 0.3s;
 }
 
 .sim-wrap__quo:hover {
@@ -450,7 +455,7 @@ a:visited {
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  margin: 5%;
+  margin: 5% 3%;
 }
 
 
@@ -463,7 +468,7 @@ a:visited {
 }
 
 .voi-wrap__con__block__txt {
-  width: 85%;
+  width: 100%;
   background-color: #E7FFFC;
   margin: 0 5%;
   padding: 1%;
@@ -535,7 +540,7 @@ a:visited {
 }
 
 .faq-wrap__con {
-  width: 50%;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -590,7 +595,7 @@ a:visited {
   background-color: #d7dafe;
   transition: transform .5s, opacity .5s;
   text-align: left;
-  display: inline-block;
+
 }
 
 .accordion[open] p {
@@ -660,7 +665,7 @@ a:visited {
 .contact-wrap__con__form__btn button{
   width: auto;
   cursor: pointer;
-  font-size: 1.25rem;
+  font-size: 1rem;
   background-color: #616BFF;
   border-radius: 50px;
   color: #fff;
