--- a/CSS/style.css
+++ b/CSS/style.css
@@ -89,6 +89,7 @@ body {
   right: 0px;
   z-index: 2;
   padding: 1.5%;
+  line-height: 1.25;
 }
 
 .circle a,
@@ -276,18 +277,18 @@ a:visited {
 }
 
 .fea-wrap__con__block__txt {
-  width: 50%;
+  width: 55%;
   text-align: center;
 }
 .fea-wrap__con__block__txt h3 {
   color: #616BFF;
-  font-size: 2rem;
+  font-size: 1.75rem;
   font-weight: bold;
   margin-top: 4%;
 }
 
 .fea-wrap__con__block__txt p {
-  font-size: 1rem;
+  font-size: 0.8rem;
   line-height: 2;
   margin-top: 5%;
   text-align: left;
@@ -295,7 +296,7 @@ a:visited {
 }
 
 .fea-wrap__con__block__img {
-  width: 45%;
+  width: 40%;
   aspect-ratio: 7 / 5;
 }
 
@@ -621,15 +622,17 @@ a:visited {
   color: #FF616B;
   font-size: 1.15rem;
   position: absolute;
-  right: 20%;
+  right: 10%;
 }
 
 .con-wrap__con{
-  width: 50%;
+  width: 77.5%;
   margin: 1.5% auto;
   padding: 5%;
   margin-top: 5%;
   background-color:#CCFFFC ;
+  text-align: center;
+  border-radius: 10px;
 }
 
 .contact-wrap__con__form__item label {
@@ -639,10 +642,11 @@ a:visited {
   font-size: 1.15rem;
   padding-bottom: 0.75%;
   text-align: left;
+  padding-left: 10%;
 }
 
 .contact-wrap__con__form__item input {
-  width: 100%;
+  width: 80%;
   height: 2.75rem;
   font-size: 1rem;
   margin-bottom: 2%;
@@ -681,7 +685,7 @@ a:visited {
 
 .footer-wrap {
   background-color: #D9D9D9;
-  padding: 5% 0;
+  padding: 2% 0;
 }
 
 .footer-wrap p {
